--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,18 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.example.demorestclient.FirstActivity"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name="com.example.demorestclient.MainActivity"
             android:label="@string/app_name" >
@@ -34,6 +39,14 @@
         <activity
             android:name="com.example.demorestclient.CreateSong"
             android:label="@string/title_activity_create_song" >
+        </activity>
+        <activity
+            android:name="com.example.demorestclient.ProfileActivity"
+            android:label="@string/title_activity_profile" >
+        </activity>
+        <activity
+            android:name="com.example.demorestclient.SongActivity"
+            android:label="@string/title_activity_song" >
         </activity>
     </application>
 
